# gst-plugin-binning

./: Makefile  README  configure.ac
src/: Makefile  Makefile.am  binning-chroma.c  binning-resize-rgb.c  binning-rgb.c  gstbinningfilter.c  gstbinningfilter.h  ldd_output.txt
src/.deps/: libbinningplugin_la-binning-chroma.Plo  libbinningplugin_la-binning-resize-rgb.Plo  libbinningplugin_la-binning-rgb.Plo  libbinningplugin_la-gstbinningfilter.Plo
